--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,61 @@
+html,
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    height: 100%;
 }
 
-a {
-  color: #00B7FF;
+.ghecop {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.container-fluid {
+    flex: 1;
+    width: 100vw;
+}
+
+#user-interface {
+    position: relative;
+}
+
+#interface-content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.profile-img {
+    margin-top: 15px;
+}
+
+.border-right {
+    border-right: 1px solid #f7f7f7
+}
+
+.user-interface-container {
+    display: table-cell;
+    vertical-align: top;
+}
+
+.navbar {
+    background-color: #3F51B5;
+}
+
+#navbarDropdownMenuLink {
+    color: rgba(255, 255, 255, 1);
+}
+
+#add-patient {
+    position: absolute;
+    min-width: 3.5em;
+    min-height: 3.5em;
+    right: 3em;
+    bottom: 3em;
+    background: center center no-repeat url("/images/add_small.png");
+    background-color: #3F51B5;
+    cursor: pointer;
+}
+
+#add-patient:focus {
+    outline: none;
 }
