--- a/views/user.pug
+++ b/views/user.pug
@@ -1,15 +1,23 @@
 extends layout
 
 block content
-	div.container
-		div.row
-			div.col-sm-6.col-md-4.col-md-offset-4
-				#user
-					h1.text-center.login-title Welcome #{user.firstName}. Check your details below:
-						div.signup-wall
-							ul.user-details
-								li First Name ---> #{user.firstName} 
-								li Last Name ---> #{user.lastName}
-								li Email    ---> #{user.email}
-								li Registered ---> #{user.created}
-						a(href='/signout', class='text-center new-account') Sign Out
+	div.ghecop
+		nav.navbar.navbar-toggleable-md.navbar-light.bg-faded
+			button.navbar-toggler.navbar-toggler-right(type="button", data-toggle="collapse", data-target="#navbarNavDropdown", aria-controls="navbarNavDropdown", aria-expanded="false", aria-label="Toggle navigation")
+				span.navbar-toggler-icon
+			div.collapse.navbar-collapse.justify-content-end
+				ul.navbar-nav
+					li.nav-item.dropdown
+						a.nav-link.dropdown-toggle(href="http://example.com", id="navbarDropdownMenuLink", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") #{user.firstName} #{user.lastName}
+						div.dropdown-menu(aria-labelledby="navbarDropdownMenuLink")
+							a.dropdown-item(href="/signout") Sign Out
+		div#user-interface.container-fluid
+			div#interface-content.row
+				sidebar.col-md-2.border-right
+					| Sidebar
+				main#patients.col-md-6.border-right
+					h2 Pazienti
+					button#add-patient.rounded-circle
+
+				div#patient-info.col-md-4
+					| Info Paziente
