Too much change to be committed!

--- a/views/register.pug
+++ b/views/register.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	div.container.full-heigth
+	div.container.fill-heigth
 		div.row.align-items-center.full-heigth
 			div.col-12
 				div.row.justify-content-center
