--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,85 +1,161 @@
-html,
-body {
-    height: 100%;
-}
+/** ALL **/
 
-.ghecop {
+.site {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
 }
 
-.container-fluid {
+.site-content {
     flex: 1;
-    width: 100vw;
-}
-
-#user-interface {
     position: relative;
 }
 
-#interface-content {
+.custom-container {
     position: absolute;
+    height: 100%;
     width: 100%;
+}
+
+.fill-height {
     height: 100%;
 }
 
-.profile-img {
-    margin-top: 15px;
+.title {
+    color: #FFF;
+    padding: 10px;
+    background-color: #2196F3;
 }
 
 .border-right {
     border-right: 1px solid #f7f7f7
 }
 
-.user-interface-container {
-    display: table-cell;
-    vertical-align: top;
+button {
+    cursor: pointer;
 }
+
+/** BACKEND **/
+
+#hospital {
+    padding: 0;
+    position: relative;
+}
+
+#add-hospital-container {
+    position: absolute;
+    bottom: 0px;
+}
+
+#add-hospital {
+    padding: 15px;
+}
+
+
+
+#add-hospital-button {
+    margin-left: 10px;
+}
+
+/** HOME **/
+
+.profile-img {
+    margin-top: 15px;
+}
+
+/** NAVBAR **/
 
 .navbar {
     background-color: #3F51B5;
 }
 
-#navbarDropdownMenuLink {
-    margin-right: 1.5em;
+.navbar > a{
     color: rgba(255, 255, 255, 1);
 }
 
-#add-patient {
-    position: absolute;
-    min-width: 3.5em;
-    min-height: 3.5em;
-    right: 3em;
-    bottom: 3em;
-    background: center center no-repeat url("/images/add_small.png");
-    background-color: #3F51B5;
-    cursor: pointer;
-    border: 0;
+#navbarDropdownMenuLink {
+    color: rgba(255, 255, 255, 1);
+    margin-right: 50px;
+}
+
+/** FOOTER **/
+
+/** USER **/
+
+#patients, #patient-info {
     padding: 0;
-    box-shadow: 2px 2px 5px 1px #aaa;
-}
-
-#add-patient:focus {
-    outline: none;
-}
-
-.add-patient-form {
     position: relative;
-    z-index: 999;
 }
 
-.shadow-background {
+#add-patient-container {
     position: absolute;
-    height: 100%;
+    bottom: 0px;
     width: 100%;
-    background-color: rgba(85, 85, 85, .35)
+}
+
+#add-patient {
+    padding: 10px;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+label {
+    margin-left: 5px;
+}
+
+#patientSex {
+    max-width: 120px;
+}
+
+#civicNumber {
+    max-width: 90px;
+    text-align: center;
+}
+
+#city {
+    max-width: 195px;
+}
+
+label > input {
+    margin-left: 5px;
+}
+
+#patient-address, #hospital-info {
+    margin-top: 15px;
+}
+
+#hospitalized {
+    margin-top: 15px;
 }
 
 .help-img {
-    color: #888;
+    width: 15px;
+    margin-left: 5px;
+    margin-right: 10px;
 }
 
-#basicAddon {
-    max-width: 100px;
+#is-hospitalized {
+    color: green;
+}
+
+#not-hospitalized {
+    color: red;
+}
+
+#patient-info-container {
+    margin: 20px;
+}
+
+/* MANAGE DEVICES */
+
+#add-device-container {
+    position: absolute;
+    bottom: 5px;
+    width: 100%;
+}
+
+#add-device {
+    padding: 10px;
+    padding-left: 80px;
+    padding-right: 80px;
 }
