--- a/silmulators/heart_monitors/heart_monitor_01/views/index.pug
+++ b/silmulators/heart_monitors/heart_monitor_01/views/index.pug
@@ -12,3 +12,20 @@ block content
                         .control.all-10
                             input(id="minBPM", type="text", name="minBPM")
 block scripts
+	script(type="text/javascript").
+		var ws = new WebSocket('ws://localhost:10000');
+		ws.onmessage = function (msg) {
+			console.log("Message received: " + msg.data);
+		}
+		var msg = {
+			device: "heart_monitor_01",
+			action: "send_data",
+			data: simulateHeartBeat
+		}
+		ws.onopen = function (event) {
+			ws.send(JSON.stringify(msg));
+		};
+
+		var simulateHeartBeat = function() {
+            return 60;
+        }
